lib_LIBRARIES=libcheck.a

include_HEADERS=check.h

libcheck_a_SOURCES=\
	check.h check_impl.h check.c check_run.c\
	check_pack.h check_pack.c\
	check_msg_new.h check_msg_new.c\
	check_msg.h check_msg.c\
	check_log.h check_log.c\
	check_str.h check_str.c\
	check_print.h check_print.c\
	error.h error.c\
	list.h list.c


CLEANFILES=*.*~