lib_LIBRARIES=libcheck.a

include_HEADERS=check.h

libcheck_a_SOURCES=\
	check_impl.h	\
	check.h		\
	check.c		\
	check_error.h	\
	check_error.c	\
	check_list.h	\
	check_list.c	\
	check_log.h	\
	check_log.c	\
	check_msg.h	\
	check_msg.c	\
	check_pack.h	\
	check_pack.c	\
	check_print.h	\
	check_print.c	\
	check_run.c	\
	check_str.h	\
	check_str.c

EXTRA_DIST=check.h.in
